src/App.css
.App {
  font-family: "Arial", sans-serif;
  background-color: #fffdf5; 
  height: 100vh;
  overflow-x: hidden;
}

.sections-container {
  scroll-snap-type: y mandatory;
  height: 100vh;
  overflow-y: scroll;
}

section {
  scroll-snap-align: start;
  height: 100vh;
  padding: 20px;
  box-sizing: border-box;
}

.home, .projects, .experience {
  padding: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.app.light {
  --bg-color: #fffdf5;
  --text-color: #000;
  --bg-gradient: linear-gradient(45deg, #a8dadc, #f1faee);
}

.app.dark {
  --bg-color: #121212;
  --text-color: #ffffff;
  --bg-gradient: linear-gradient(45deg, #2c3e50, #000000);
}

.app {
  background-color: var(--bg-color);
  color: var(--text-color);
  transition: background-color 0.3s ease, color 0.3s ease;
}

